--- a/endereco.html
+++ b/endereco.html
@@ -46,16 +46,18 @@
       </nav>
     </div>
     <!-- navbar end -->
-    <!-- address start-->
-    <div class="container-fluid endereco m-3">
-      <h1 class="font-weight-light">Vamos tirar o projeto do papel?</h1>
+ 
+    <div class="container-fluid endereco">
+      <h1 class="font-weight-light text-center">Vamos tirar o projeto do papel?</h1>
       <hr />
-      <div class="row d-flex justify-content-around">
-        <div class="col">
-          <div class="w-100" id="map"></div>
+      <div class="row w-100">
+   <!-- map start-->
+        <div class="col-11 p-3 mx-auto">
+          <div class="w-100 mx-auto" id="map"></div>
         </div>
-
-        <div class="col my-auto text-center">
+    <!-- map end-->
+    <!-- address start-->
+        <div class="col text-center my-auto">
           <h6 class="fw-bold">Endereço</h6>
           <p>
             Av. Barão Homem de Melo, 158 <br />
@@ -70,10 +72,10 @@
           </p>
           <a class="zap"><img src="images/zap.jpg" alt="whatsapp" /></a>
         </div>
-
-        <!-- api weather start -->
-        <div class="col mt-4 mt-md-0">
-          <div class="card border-success mb-3 tempo text-center shadow-lg">
+    <!-- address end-->
+    <!-- api weather start -->
+        <div class="col p-3">
+          <div class="card border-success tempo text-center shadow-lg w-100 m-auto">
             <div class="card-header border-success">Planeje a obra em função do tempo!</div>
             <div class="card-body text-success">
               <h5 class="card-title cidade">Cidade</h5>
@@ -94,10 +96,10 @@
             </div>
           </div>
         </div>
-        <!-- api weather end -->
+    <!-- api weather end -->
       </div>
     </div>
-    <!-- address end-->
+
     <!-- footer -->
     <div class="container-fluid p-2 footer text-center">
       <a class="" href="/legal.html">Aviso legal | Copyright © 2023 | Todos os direitos reservados.</a>
