fix legal page link

--- a/empresa.html
+++ b/empresa.html
@@ -58,7 +58,7 @@
 
     <!-- footer -->
     <div class="container-fluid p-2 footer text-center">
-      <a class="" href="/legal.html">Aviso legal | Copyright © 2023 | Todos os direitos reservados.</a>
+      <a class="" href="legal.html">Aviso legal | Copyright © 2023 | Todos os direitos reservados.</a>
     </div>
 
     <script
