--- a/legal.html
+++ b/legal.html
@@ -18,19 +18,14 @@
   <body>
     <!-- navbar start -->
     <div class="container">
-      <nav class="navbar navbar-expand-xl px-5 navbar-light bg-light">
+      <nav class="navbar px-5 navbar-light bg-light justify-content-end">
         <a href="index.html">
-           <img class="navbar-brand" src="images/logo-20180405152037.jpg" alt="Logo Himpercon" title="Logo Himpercon" />
+          <img class="navbar-brand" src="images/logo-20180405152037.jpg" alt="Logo Himpercon" title="Logo Himpercon" />
         </a>
-       
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
       </nav>
     </div>
     <!-- navbar end -->
-    <div class="container mt-5">
+    <div class="container">
       <h2><span style="color: rgb(68, 68, 68)">Política Privacidade</span></h2>
       <p>
         <span style="color: rgb(68, 68, 68)"
