--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <!-- cards end-->
     <!-- footer -->
     <div class="container-fluid p-2 footer text-center">
-      <a href="/legal.html">Aviso legal | Copyright © 2023 | Todos os direitos reservados.</a>
+      <a href="legal.html">Aviso legal | Copyright © 2023 | Todos os direitos reservados.</a>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
