--- a/servicos.html
+++ b/servicos.html
@@ -104,7 +104,7 @@
     <!-- services 2 end -->
     <!-- footer -->
     <div class="container-fluid p-2 footer text-center">
-      <a class="" href="/legal.html">Aviso legal | Copyright © 2023 | Todos os direitos reservados.</a>
+      <a class="" href="legal.html">Aviso legal | Copyright © 2023 | Todos os direitos reservados.</a>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
