fix badges font-size

--- a/endereco.html
+++ b/endereco.html
@@ -83,7 +83,7 @@
               <div class="icon"><img src="images/icons/unknown.png" alt="" /></div>
               <div class="container d-flex justify-content-center">
                 <div class="temperatura">0</div>
-                <span>°C</span>
+                <span class="graus">°C</span>
               </div>
               <h4 class="tempText">Céu</h4>
               <div class="humidadeText">Humidade</div>
