--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>
     <!-- cards end-->
     <!-- footer -->
-    <div class="container-fluid p-2 footer text-center">
+    <div class="container-fluid p-2 footer text-center fixed-bottom">
       <a href="legal.html">Aviso legal | Copyright © 2023 | Todos os direitos reservados.</a>
     </div>
     <script
