--- a/produtos.html
+++ b/produtos.html
@@ -98,7 +98,7 @@
     <!-- providers end -->
 
     <!-- footer -->
-    <div class="container-fluid p-2 footer text-center">
+    <div class="container-fluid p-2 footer text-center fixed-bottom">
       <a class="" href="legal.html">Aviso legal | Copyright © 2023 | Todos os direitos reservados.</a>
     </div>
     <script
