--- a/produtos.html
+++ b/produtos.html
@@ -76,22 +76,22 @@
     </div>
     <!-- products end -->
     <!-- providers start -->
-    <div class="container-fluid providers align-content-center my-3 text-center border border-2 rounded border-success">
-      <div class="row justify-content-around">
-        <div class="col col-md-2 col-sm-1">
-          <img class="w-100" src="images/providers/denver.jpg" alt="product" />
+    <div class="container-fluid text-center providers my-3 border border-2 rounded border-success mb-5">
+      <div class="row">
+        <div class="col">
+          <img src="images/providers/denver.jpg" alt="product" />
         </div>
-        <div class="col col-md-2 col-sm-1">
-          <img class="w-100" src="images/providers/dplastic.jpg" alt="product" />
+        <div class="col ">
+          <img src="images/providers/dplastic.jpg" alt="product" />
         </div>
-        <div class="col col-md-2 col-sm-1">
-          <img class="w-100" src="images/providers/driko.jpg" alt="product" />
+        <div class="col ">
+          <img src="images/providers/driko.jpg" alt="product" />
         </div>
-        <div class="col col-md-2 col-sm-1">
-          <img class="w-100" src="images/providers/gmf.jpg" alt="product" />
+        <div class="col ">
+          <img src="images/providers/gmf.jpg" alt="product" />
         </div>
-        <div class="col col-md-2 col-sm-1">
-          <img class="w-100" src="images/providers/viapol.jpg" alt="product" />
+        <div class="col ">
+          <img src="images/providers/viapol.jpg" alt="product" />
         </div>
       </div>
     </div>
