--- a/servicos.html
+++ b/servicos.html
@@ -11,7 +11,6 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="styles.css" />
@@ -72,7 +71,7 @@
     </div>
     <!-- services end -->
     <!-- services 2 start-->
-    <div class="container-fluid p-4">
+    <div class="container-fluid p-4 pb-5">
       <h3 class="pb-1 text-center">...para cada superfície</h3>
       <div class="row justify-content-between">
         <div class="col-md col-sm-2">
@@ -103,7 +102,7 @@
     </div>
     <!-- services 2 end -->
     <!-- footer -->
-    <div class="container-fluid p-2 footer text-center ">
+    <div class="container-fluid p-2 footer text-center fixed-bottom">
       <a class="" href="legal.html">Aviso legal | Copyright © 2023 | Todos os direitos reservados.</a>
     </div>
     <script
