--- a/index.html
+++ b/index.html
@@ -11,14 +11,6 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet" />
-
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="styles.css" />
@@ -57,7 +49,7 @@
           <a href="endereco.html" class="zap"><img src="images/zap.jpg" alt="whatsapp" /></a>
         </div>
 
-        <div class="col-auto">
+        <div class="col-auto mx-auto">
           <img src="images/empresa.jpg" alt="Imagem da empresa" class="w-100" />
         </div>
       </div>
@@ -94,7 +86,7 @@
     </div>
     <!-- badges end-->
     <!-- cards start-->
-    <div class="containeri-fluid cards m-3">
+    <div class="containeri-fluid cards m-3 pb-4">
       <div class="d-flex row">
         <div class="col border border-2 rounded border-success m-2 p-3 shadow-lg">
           <div class="row">
